--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
+log/
+checkpoint/
+datasets/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
